--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <ul>
             <li>Vagrant</li>
             <li>Docker</li>
-            <li>Integração continua</li>
+            <li>Integração continua - bla bla bla bla</li>
         </ul>
     </body>
 </html>
