Alteração arquivo index nome curso Docker

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <ul>
             <li>Vagrant</li>
-            <li>Docker</li>
+            <li>Docker- tru tru tru</li>
             <li>Integração continua - bla bla bla bla</li>
         </ul>
     </body>
